Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32405

QSvgRenderer::boundsOnElement broken for text nodes

    XMLWordPrintable

Details

    • All
    • 7063de4f39c2915a69ce4bfad992c2e44df9dccb (qt/qtsvg/dev)

    Description

      When calling boundsOnElement() on a text node QRectF(0,0 0x0) is always returned. I've searched around a bit, and can find one reference on a Yahoo group to this as well. I've tried a couple of different versions of Qt, but, am currently using 4.8.5 on a Mac.

      When calling this method for non-text nodes, it works correctly.

      Attachments

        1. test.svg.zip
          0.8 kB
          Timothy Reaves
        2. qtbug32405mod.tgz
          1 kB
          Eirik Aavitsland

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              vgt Eirik Aavitsland
              treaves Timothy Reaves
              Votes:
              5 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes