Fix issue #3338

QSvgText::bounds is not implemented (QTBUG-32405).
Fritzing uses a custom implementation to determine position
and size of a text. If the text was to small, the position
would not be set correctly.